--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/main.css" rel="stylesheet">
+  <link href="/input.css" rel="stylesheet">
+  <title>Microsoft – Cloud, Computers, Apps & Gaming</title>
 </head>
+
 <body>
-    <div class="text-center m-2 text-orange-300 font-light">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore architecto placeat est omnis sapiente voluptatem corrupti nam commodi in ex molestiae, cupiditate minus qui dicta accusantium dignissimos cum, dolorum velit?
+  <div class="navbar flex justify-between items-center p-4">
+    <div class="items-center justify-center flex ml-2 md:order-3">
+      <img class="h-6 w-6 mr-2 md:hidden" src="./images/menu.png" alt="menuLogo">
+      <img class="h-4 w-4 ml-2 md:hidden" src="./images/search.png" alt="searchIcon">
     </div>
+    <div class="logo text-center flex mx-2 md:order-1">
+      <img class="h-7 w-7 ml-2" src="./images/icons8-microsoft-48.png" alt="microsoftLogo">
+      <span class="ml-1 font-semibold text-lg">Microsoft</span>
+      <div class="feature absolute w-fit inset-0 -translate-x-28 bg-gray-200 md:bg-white md:static md:w-auto md:flex md:-translate-x-0 md:mx-8 md:space-x-3">
+          <div class="fitem">Microsoft 365</div>
+          <div class="fitem">Teams</div>
+          <div class="fitem">Copilot</div>
+          <div class="fitem">Windows</div>
+          <div class="fitem">Surface</div>
+          <div class="fitem">Xbox</div>
+          <div class="fitem">Support</div>
+          <!-- <div class="fitem flex items-center"><span>More</span> <img class="h-3 w-3 ml-2 mt-2" src="./images/icons8-expand-arrow-50.png" alt="expandArrow" ></div> -->
+      </div>
+    </div>
+    <div class="logo text-center flex items-center justify-center md:order-4">
+      <img class="h-4 w-4 mr-10 mt-1 hidden md:block" src="./images/search.png" alt="searchIcon">
+      <img class="h-5 w-5 mr-3" src="./images/shopping-cart.png" alt="cart">
+      <img class="h-7 w-7 mx-3" src="./images/user.png" alt="accountLogo">
+    </div>
+  </div>
 </body>
+
 </html>
