updated sidebar and added new section promo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container mx-auto">
-
+    <!-- Navbar -->
     <div class="navbar flex justify-between items-center p-4">
       <div class="items-center justify-center flex ml-2 md:order-3">
         <img class="h-6 w-6 mr-2 md:hidden" src="./images/menu.png" alt="menuLogo">
@@ -51,7 +51,9 @@
         </div>
       </div>
     </div>
-  
+     
+
+    <!-- Slider -->
     <div class="slider flex flex-col-reverse md:flex-row md:bg-[#e8eff5] shadow-md mx-1 md:mx-0">
       <div class="left flex flex-col justify-center md:w-1/2 h-1/2 w-full my-auto md:mx-8 mx-1 bg-white py-4 px-1">
             <div class="my-3 md:mx-12 mx-4"><span class="bg-yellow-400 px-3 py-1 font-semibold">New</span></div>
@@ -63,6 +65,26 @@
       </div>
       <div >
         <img class="right h-full" src="./images/laptop.png" alt="laptop1">
+      </div>
+    </div>
+
+    <!-- Microsoft Promo -->
+    <div class="promo flex flex-row md:space-y-8 md:space-x-8 space-y-8 justify-center flex-wrap md:flex-nowrap">
+      <div class="item md:mt-8 mt-8 flex flex-col items-center space-y-1 cursor-pointer md:w-fit w-1/2">
+        <img class="w-10 h-10" src="./images/Icons-Microsoft-365.svg" alt="MicrosoftIcon">
+        <span class="underline decoration-[#0067b8] text-[#0067b8]">Choose your Microsoft 365</span>
+      </div>
+      <div class="item flex flex-col items-center space-y-1 cursor-pointer md:w-fit w-1/2">
+        <img class="w-10 h-10"  src="./images/Icons-Xbox-Games-Consoles.svg" alt="">
+        <span class="underline decoration-[#0067b8] text-[#0067b8]">Shop Xbox</span>
+      </div>
+      <div class="item flex flex-col items-center space-y-1 cursor-pointer md:w-fit w-1/2">
+        <img class="w-10 h-10"  src="./images/Icons-Microsoft-365.svg" alt="">
+        <span class="underline decoration-[#0067b8] text-[#0067b8]">Get Windows 11</span>
+      </div>
+      <div class="item flex flex-col items-center space-y-1 cursor-pointer md:w-fit w-1/2">
+        <img class="w-10 h-10"  src="./images/Icons-Surface-Devices.svg" alt="">
+        <span class="underline decoration-[#0067b8] text-[#0067b8]">Explore Surface devices</span>
       </div>
     </div>
   </div>
