--- a/index.html
+++ b/index.html
@@ -16,77 +16,141 @@
         <img class="h-6 w-6 mr-2 md:hidden" src="./images/menu.png" alt="menuLogo">
         <img class="h-4 w-4 ml-2 md:hidden" src="./images/search.png" alt="searchIcon">
       </div>
-      <div class="logo text-center flex mx-2 md:order-1">
+      <div class="logo text-center flex mx-2 md:order-1 cursor-pointer">
         <img class="h-7 w-7 ml-2" src="./images/icons8-microsoft-48.png" alt="microsoftLogo">
-        <span class="ml-1 font-semibold text-lg">Microsoft</span>
+        <span class="ml-1 font-semibold text-lg text-gray-500">Microsoft</span>
         <div
           class="feature absolute w-fit inset-0 -translate-x-28 bg-gray-200 md:bg-white md:static md:w-auto md:flex md:-translate-x-0 md:mx-8 md:space-x-3 md:text-sm md:items-center md:cursor-pointer">
-          <div class="fitem">Microsoft 365</div>
-          <div class="fitem">Teams</div>
-          <div class="fitem">Copilot</div>
-          <div class="fitem">Windows</div>
-          <div class="fitem">Surface</div>
-          <div class="fitem">Xbox</div>
-          <div class="fitem">Support</div>
+          <div class="fitem hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Microsoft 365</div>
+          <div class="fitem hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Teams</div>
+          <div class="fitem hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Copilot</div>
+          <div class="fitem hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Windows</div>
+          <div class="fitem hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Surface</div>
+          <div class="fitem hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Xbox</div>
+          <div class="fitem hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Support</div>
           <!-- <div class="fitem flex items-center"><span>More</span> <img class="h-3 w-3 ml-2 mt-2" src="./images/icons8-expand-arrow-50.png" alt="expandArrow" ></div> -->
         </div>
       </div>
-      <div class="logo text-center flex items-center justify-center md:order-4 md:space-x-8 md:mr-7">
+      <div class="logo text-center flex items-center justify-center md:order-4 md:space-x-8 md:mr-7 cursor-pointer">
         <div class="hidden md:flex md:items-center md:justify-center md:space-x-2">
-          <span class="text-sm md:items-center">All Microsoft</span>
+          <span class="text-sm md:items-center hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">All
+            Microsoft</span>
           <img class="h-3 w-3 mt-2" src="./images/icons8-expand-arrow-50.png" alt="expandArrow">
         </div>
-        <div class="md:flex md:space-x-2 md:items-center">
-          <span class="hidden md:text-sm md:block">Search</span>
-           <img class="h-4 w-4 mr-10 mt-1 hidden md:block md:mr-0" src="./images/search.png" alt="searchIcon">
+        <div class="md:flex md:space-x-2 md:items-center cursor-pointer">
+          <span
+            class="hidden md:text-sm md:block hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Search</span>
+          <img class="h-4 w-4 mr-10 mt-1 hidden md:block md:mr-0" src="./images/search.png" alt="searchIcon">
         </div>
-        <div class="md:flex md:space-x-2 md:items-center">
-          <span class="hidden md:text-sm md:block">Cart</span>
+        <div class="md:flex md:space-x-2 md:items-center cursor-pointer">
+          <span
+            class="hidden md:text-sm md:block hover:underline hover:underline-offset-4 hover:decoration-[1.5px]">Cart</span>
           <img class="h-5 w-5 mr-3 md:mr-0" src="./images/shopping-cart.png" alt="cart">
         </div>
-  
-        <div class="md:flex md:space-x-2 md:items-center">
+
+        <div class="md:flex md:space-x-2 md:items-center cursor-pointer">
           <span class="hidden md:text-sm md:block">Sign In</span>
           <img class="h-7 w-7 mx-3 md:mx-0" src="./images/user.png" alt="accountLogo">
         </div>
       </div>
     </div>
-     
+
 
     <!-- Slider -->
     <div class="slider flex flex-col-reverse md:flex-row md:bg-[#e8eff5] shadow-md mx-1 md:mx-0">
       <div class="left flex flex-col justify-center md:w-1/2 h-1/2 w-full my-auto md:mx-8 mx-1 bg-white py-4 px-1">
-            <div class="my-3 md:mx-12 mx-4"><span class="bg-yellow-400 px-3 py-1 font-semibold">New</span></div>
-            <h2 class="md:mx-12 mx-4 md:text-5xl text-2xl font-semibold md:font-normal">Meet Surface pro</h2>
-            <p class="md:mt-8 mb-2 md:mx-12 mx-4 mt-5 text-sm md:text-lg">This laptop's unrivalled flexibility and AI features like Recall and Cocreator, enable you to do more than you ever imagined.</p>
-            <div class="md:mx-12 mx-4 md:my-4 mt-4 md:mt-4"><button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Learn More</button>
-            <!-- #0078d4  -->
-            </div>
+        <div class="my-3 md:mx-12 mx-4"><span class="bg-yellow-400 px-3 py-1 font-semibold">New</span></div>
+        <h2 class="md:mx-12 mx-4 md:text-5xl text-2xl font-semibold md:font-normal">Meet Surface pro</h2>
+        <p class="md:mt-8 mb-2 md:mx-12 mx-4 mt-5 text-sm md:text-lg">This laptop's unrivalled flexibility and AI
+          features like Recall and Cocreator, enable you to do more than you ever imagined.</p>
+        <div class="md:mx-12 mx-4 md:my-4 mt-4 md:mt-4"><button
+            class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Learn More</button>
+          <!-- #0078d4  -->
+        </div>
       </div>
-      <div >
+      <div>
         <img class="right h-full" src="./images/laptop.png" alt="laptop1">
       </div>
     </div>
 
     <!-- Microsoft Promo -->
-    <div class="promo flex flex-row md:space-y-8 md:space-x-8 space-y-8 justify-center flex-wrap md:flex-nowrap">
+    <div class="promo my-20 flex flex-row md:space-y-8 md:space-x-8 space-y-8 justify-center flex-wrap md:flex-nowrap">
       <div class="item md:mt-8 mt-8 flex flex-col items-center space-y-1 cursor-pointer md:w-fit w-1/2">
         <img class="w-10 h-10" src="./images/Icons-Microsoft-365.svg" alt="MicrosoftIcon">
         <span class="underline decoration-[#0067b8] text-[#0067b8]">Choose your Microsoft 365</span>
       </div>
       <div class="item flex flex-col items-center space-y-1 cursor-pointer md:w-fit w-1/2">
-        <img class="w-10 h-10"  src="./images/Icons-Xbox-Games-Consoles.svg" alt="">
+        <img class="w-10 h-10" src="./images/Icons-Xbox-Games-Consoles.svg" alt="">
         <span class="underline decoration-[#0067b8] text-[#0067b8]">Shop Xbox</span>
       </div>
       <div class="item flex flex-col items-center space-y-1 cursor-pointer md:w-fit w-1/2">
-        <img class="w-10 h-10"  src="./images/Icons-Microsoft-365.svg" alt="">
+        <img class="w-10 h-10" src="./images/Icons-Microsoft-365.svg" alt="">
         <span class="underline decoration-[#0067b8] text-[#0067b8]">Get Windows 11</span>
       </div>
       <div class="item flex flex-col items-center space-y-1 cursor-pointer md:w-fit w-1/2">
-        <img class="w-10 h-10"  src="./images/Icons-Surface-Devices.svg" alt="">
+        <img class="w-10 h-10" src="./images/Icons-Surface-Devices.svg" alt="">
         <span class="underline decoration-[#0067b8] text-[#0067b8]">Explore Surface devices</span>
       </div>
     </div>
+
+    <!-- cards -->
+    <div class="card my-20 flex flex-col md:flex-row items-center md:space-x-2 md:space-y-3 space-y-12">
+      <div class="card1 mx-2 md:mx-0 md:w-1/4 md:h-1/3 mt-3 shadow-md space-y-6 flex flex-col justify-center md:flex-none">
+        <img src="./images/Sandstone-Icon-Toss.avif" alt="SandstoneIcon">
+        <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0">Maximise the everyday with Microsoft 365</h2>
+        <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem]">Get online protection, secure cloud storage and innovative apps designed to fit your needs – all
+          in one plan.</p>
+          <div>
+            <div class="ml-8 mb-5 flex md:flex-col md:items-baseline items-center">
+              <button class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[10rem]">
+                For one person</button>
+              <p class="text-lg my-4 mx-1 text-[#0067b8] flex items-center">For upto six people 
+                <img class="rotate-[270deg] w-4 h-4 mx-2 mt-1 fill-blue-500" src="./images/icons8-expand-arrow-50.svg" alt=""></p>
+            </div>
+          </div>
+      </div>
+
+      <div class="card2 mx-2 md:mx-0 md:w-1/4 md:h-1/3 shadow-md space-y-6 flex flex-col justify-center md:flex-none">
+        <img src="./images/Xbox-Series-X.webp" alt="SandstoneIcon">
+        <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0">Xbox Series X</h2>
+        <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem]">The fastest, most powerful Xbox ever</p>
+          <div>
+            <div class="ml-8 md:mt-[12rem] mb-5 flex md:flex-col md:items-baseline items-center">
+              <button class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
+                Shop Xbox Series X</button>
+            </div>
+          </div>
+      </div>
+
+      <div class="card3 mx-2 md:mx-0 md:w-1/4 md:h-1/3 shadow-md space-y-6 flex flex-col justify-center md:flex-none">
+        <img src="./images/Xbox-Series-S-Evergreen.jpg" alt="SandstoneIcon">
+        <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0">Xbox Series S</h2>
+        <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem]">Next-gen performance in the smallest Xbox ever.</p>
+          <div>
+            <div class="ml-8 md:mt-[12rem] mb-5 flex md:flex-col md:items-baseline items-center">
+              <button class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
+                Shop Xbox Series S</button>
+            </div>
+          </div>
+      </div>
+
+      <div class="card4 mx-2 md:mx-0 md:w-1/4 md:h-1/3 shadow-md space-y-6 flex flex-col justify-center md:flex-none">
+        <img src="./images/Game-Pass-Ultimate.avif" alt="SandstoneIcon">
+        <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0">Xbox Game Pass Ultimate</h2>
+        <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem]">Play new games on day one. Plus, enjoy hundreds of high-quality games with friends on console and PC.</p>
+          <div>
+            <div class="ml-8 md:mt-[6.25rem] mb-5 flex md:flex-col md:items-baseline items-center">
+              <button class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
+                Join now</button>
+            </div>
+          </div>
+      </div>
+    </div>
+
+
+
+
+    
   </div>
 </body>
 
