added business cards and few updates

--- a/index.html
+++ b/index.html
@@ -94,63 +94,166 @@
     </div>
 
     <!-- cards -->
-    <div class="card my-20 flex flex-col md:flex-row items-center md:space-x-2 md:space-y-3 space-y-12">
-      <div class="card1 mx-2 md:mx-0 md:w-1/4 md:h-1/3 mt-3 shadow-md space-y-6 flex flex-col justify-center md:flex-none">
-        <img src="./images/Sandstone-Icon-Toss.avif" alt="SandstoneIcon">
-        <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0">Maximise the everyday with Microsoft 365</h2>
-        <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem]">Get online protection, secure cloud storage and innovative apps designed to fit your needs – all
-          in one plan.</p>
-          <div>
-            <div class="ml-8 mb-5 flex md:flex-col md:items-baseline items-center">
-              <button class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[10rem]">
-                For one person</button>
-              <p class="text-lg my-4 mx-1 text-[#0067b8] flex items-center">For upto six people 
-                <img class="rotate-[270deg] w-4 h-4 mx-2 mt-1 fill-blue-500" src="./images/icons8-expand-arrow-50.svg" alt=""></p>
-            </div>
+    <div
+      class="card my-20 flex flex-col md:flex-row items-center md:space-x-1 md:space-y-3 space-y-12 md:h-[40rem] md:justify-center">
+
+      <div class="card1 mx-2 md:mx-0 md:w-1/4 md:h-full mt-3 shadow-md flex flex-col justify-between md:flex-none">
+        <div>
+          <img src="./images/Sandstone-Icon-Toss.avif" alt="SandstoneIcon">
+          <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0 md:my-6 mt-6">Maximise the everyday with
+            Microsoft 365
+          </h2>
+          <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem] md:mt-auto mt-4">Get online protection, secure
+            cloud storage and
+            innovative apps designed to fit your needs – all
+            in one plan.</p>
+        </div>
+        <div class="md:mt-0 mt-3">
+          <div class="ml-8 mb-5 md:mb-2 flex md:flex-col md:items-baseline items-center">
+            <button
+              class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[10rem]">
+              For one person</button>
+            <p class="text-lg my-4 mx-1 text-[#0067b8] flex items-center">For upto six people
+              <img class="rotate-[270deg] w-4 h-4 mx-2 mt-1 fill-blue-500" src="./images/icons8-expand-arrow-50.svg"
+                alt="">
+            </p>
           </div>
+        </div>
       </div>
 
-      <div class="card2 mx-2 md:mx-0 md:w-1/4 md:h-1/3 shadow-md space-y-6 flex flex-col justify-center md:flex-none">
-        <img src="./images/Xbox-Series-X.webp" alt="SandstoneIcon">
-        <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0">Xbox Series X</h2>
-        <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem]">The fastest, most powerful Xbox ever</p>
-          <div>
-            <div class="ml-8 md:mt-[12rem] mb-5 flex md:flex-col md:items-baseline items-center">
-              <button class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
-                Shop Xbox Series X</button>
-            </div>
+      <div class="card2 mx-2 md:mx-0 md:w-1/4 md:h-full shadow-md flex flex-col justify-between md:flex-none">
+        <div>
+          <img src="./images/Xbox-Series-X.webp" alt="SandstoneIcon">
+          <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0 md:my-6 mt-6">Xbox Series X</h2>
+          <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem] md:mt-auto mt-4">The fastest, most powerful Xbox
+            ever</p>
+        </div>
+        <div class="md:mt-auto mt-3">
+          <div class="ml-8 mb-5 flex md:flex-col md:items-baseline items-center">
+            <button
+              class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
+              Shop Xbox Series X</button>
           </div>
+        </div>
       </div>
 
-      <div class="card3 mx-2 md:mx-0 md:w-1/4 md:h-1/3 shadow-md space-y-6 flex flex-col justify-center md:flex-none">
-        <img src="./images/Xbox-Series-S-Evergreen.jpg" alt="SandstoneIcon">
-        <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0">Xbox Series S</h2>
-        <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem]">Next-gen performance in the smallest Xbox ever.</p>
-          <div>
-            <div class="ml-8 md:mt-[12rem] mb-5 flex md:flex-col md:items-baseline items-center">
-              <button class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
-                Shop Xbox Series S</button>
-            </div>
+      <div class="card3 mx-2 md:mx-0 md:w-1/4 md:h-full shadow-md flex flex-col justify-between md:flex-none">
+        <div>
+          <img src="./images/Xbox-Series-S-Evergreen.jpg" alt="SandstoneIcon">
+          <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0 md:my-6 mt-6">Xbox Series S</h2>
+          <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem] md:mt-auto mt-4">Next-gen performance in the
+            smallest Xbox ever.
+          </p>
+        </div>
+        <div class="md:mt-auto mt-3">
+          <div class="ml-8 mb-5 flex md:flex-col md:items-baseline items-center">
+            <button
+              class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
+              Shop Xbox Series S</button>
           </div>
+        </div>
       </div>
 
-      <div class="card4 mx-2 md:mx-0 md:w-1/4 md:h-1/3 shadow-md space-y-6 flex flex-col justify-center md:flex-none">
-        <img src="./images/Game-Pass-Ultimate.avif" alt="SandstoneIcon">
-        <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0">Xbox Game Pass Ultimate</h2>
-        <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem]">Play new games on day one. Plus, enjoy hundreds of high-quality games with friends on console and PC.</p>
-          <div>
-            <div class="ml-8 md:mt-[6.25rem] mb-5 flex md:flex-col md:items-baseline items-center">
-              <button class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
-                Join now</button>
-            </div>
+      <div class="card4 mx-2 md:mx-0 md:w-1/4 md:h-full shadow-md flex flex-col justify-between md:flex-none">
+        <div>
+          <img src="./images/Game-Pass-Ultimate.avif" alt="SandstoneIcon">
+          <h2 class="md:text-3xl text-2xl font-semibold md:ml-8 mx-8 md:mx-0 md:my-6 mt-6">Xbox Game Pass Ultimate</h2>
+          <p class="ml-8 md:w-[16rem] w-[18rem] text-lg md:text-[1rem] md:mt-auto mt-4">Play new games on day one. Plus,
+            enjoy hundreds
+            of high-quality games with friends on console and PC.</p>
+        </div>
+        <div class="md:mt-auto mt-3">
+          <div class="ml-8 mb-5 flex md:flex-col md:items-baseline items-center">
+            <button
+              class="bg-[#0067b8] text-white md:text-lg md:py-2 md:px-4 h-10 px-2 mr-3 md:mr-0 md:h-auto rounded-sm hover:bg-[#004a7f] md:w-[14rem]">
+              Join now</button>
           </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Copilot -->
+    <div
+      class="copilot flex flex-col-reverse md:flex-row md:w-full h-[28rem] md:bg-gradient-to-tr from-[#d6c9e7] to-[#dce6f0] bg-white mx-2 md:mx-auto md:mt-0 mt-[8rem]">
+
+      <div class="img-text md:w-[45%] w-full h-[24rem] mx-2 md:my-auto md:py-14 md:px-14">
+        <h2 class="md:text-4xl w-[18rem] mt-4 md:mt-auto mx-6 md:mx-auto md:w-auto text-2xl font-semibold">Unlock Your
+          Potential with Microsoft Copilot</h2>
+        <p class="my-6 md:mx-auto mx-6 w-[20rem] text-lg">Get things done faster and unleash your creativity with the
+          power of AI anywhere you go.</p>
+        <div><button
+            class="bg-[#0067b8] text-white md:text-lg md:py-2 py-3 px-4 rounded-sm hover:bg-[#004a7f] md:mx-auto mx-6">Download
+            The Copilot app</button>
+        </div>
+      </div>
+      <div class="image md:w-full">
+        <img class="md:h-full md:w-full" src="./images/MultiCanvas-Microsoft-Copilot-App-3.avif" alt="">
+      </div>
+    </div>
+
+
+    <!-- Business Cards -->
+    <div class="business mt-5">
+      <h2 class="md:text-4xl text-2xl font-semibold mt-20 mb-6 md:mx-auto mx-3">For Business</h2>
+
+      <div class="business cards flex md:flex-row flex-col items-center  md:h-[28rem] w-full md:space-y-0 space-y-3">
+
+        <div class="businessCard1 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between">
+          <div>
+            <img src="./images/SurfaceFamilyForBusiness.avif" alt="">
+            <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:mt-12 mt-8">Surface for Business</h2>
+            <p class="ml-6 md:mt-4 mt-3 w-[16rem]">No matter what you do, there's a Surface to help you do it</p>
+          </div>
+          <div class="ml-6 pb-6 md:mt-auto mt-3">
+            <button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Shop now</button>
+          </div>
+        </div>
+
+        <div class="businessCard2 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between">
+          <div>
+            <img src="./images/Microsoft-Teams-Commercial.webp" alt="">
+            <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:mt-12 mt-8 w-[16rem]">Get Microsoft Teams for free</h2>
+            <p class="ml-6 md:mt-4 mt-3 w-[16rem]"> Online meetings, chat and shared cloud storage – all in one place. </p>
+          </div>
+          <div class="ml-6 pb-6 md:mt-auto mt-4">
+            <button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Sign up for free</button>
+          </div>
+        </div>
+
+
+
+        <div class="businessCard3 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between">
+          <div>
+            <img src="./images/Content-Card-Copilot-Commercial.avif" alt="">
+            <span class="block px-3 py-1 w-fit bg-yellow-400 ml-6 md:mt-3 mt-3 font-semibold">New</span>
+            <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:w-[16rem]  md:mt-auto mt-1">Copilot for Microsoft 365</h2>
+            <p class="ml-6 md:mt-4 mt-3 w-[16.5rem]">Save time and focus on the things that matter most with AI in Microsoft 365 for business.</p>
+          </div>
+          <div class="ml-6 pb-6 md:mt-auto mt-4">
+            <button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Learn more</button>
+          </div>
+        </div>
+
+
+        <div class="businessCard4  md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between">
+          <div>
+            <img src="./images/Content-Card-Windows-11-Business.jpg" alt="">
+            <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:mt-12 mt-8 w-[16rem]">Windows 11 for business</h2>
+            <p class="ml-6 md:mt-4 mt-3 w-[16rem]">Designed for hybrid work. Powerful for employees. Consistent for IT. Secure for all.</p>
+          </div>
+          <div class="ml-6 pb-6 md:mt-auto mt-4">
+            <button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Learn more</button>
+          </div>
+        </div>
       </div>
     </div>
 
 
 
-
-    
+    <div class="m-12">
+      Extra
+    </div>
   </div>
 </body>
 
