added links,buttons and footer

--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
 
     <!-- Business Cards -->
     <div class="business mt-5">
-      <h2 class="md:text-4xl text-2xl font-semibold mt-20 mb-6 md:mx-auto mx-3">For Business</h2>
+      <h2 class="md:text-4xl text-2xl font-semibold mt-20 mb-6 md:mx-auto mx-3 md:ml-8">For Business</h2>
 
-      <div class="business cards flex md:flex-row flex-col items-center  md:h-[28rem] w-full md:space-y-0 space-y-3">
+      <div class="business cards flex md:flex-row flex-col items-center  md:h-[30rem] w-full md:space-y-0 space-y-3">
 
-        <div class="businessCard1 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between">
+        <div class="businessCard1 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between md:mx-auto mx-2">
           <div>
             <img src="./images/SurfaceFamilyForBusiness.avif" alt="">
             <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:mt-12 mt-8">Surface for Business</h2>
@@ -210,25 +210,30 @@
           </div>
         </div>
 
-        <div class="businessCard2 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between">
+        <div class="businessCard2 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between md:mx-auto mx-2">
           <div>
             <img src="./images/Microsoft-Teams-Commercial.webp" alt="">
-            <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:mt-12 mt-8 w-[16rem]">Get Microsoft Teams for free</h2>
-            <p class="ml-6 md:mt-4 mt-3 w-[16rem]"> Online meetings, chat and shared cloud storage – all in one place. </p>
+            <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:mt-12 mt-8 w-[16rem]">Get Microsoft Teams for free
+            </h2>
+            <p class="ml-6 md:mt-4 mt-3 w-[16rem]"> Online meetings, chat and shared cloud storage – all in one place.
+            </p>
           </div>
           <div class="ml-6 pb-6 md:mt-auto mt-4">
-            <button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Sign up for free</button>
+            <button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Sign up for
+              free</button>
           </div>
         </div>
 
 
 
-        <div class="businessCard3 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between">
+        <div class="businessCard3 md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between md:mx-auto mx-2">
           <div>
             <img src="./images/Content-Card-Copilot-Commercial.avif" alt="">
             <span class="block px-3 py-1 w-fit bg-yellow-400 ml-6 md:mt-3 mt-3 font-semibold">New</span>
-            <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:w-[16rem]  md:mt-auto mt-1">Copilot for Microsoft 365</h2>
-            <p class="ml-6 md:mt-4 mt-3 w-[16.5rem]">Save time and focus on the things that matter most with AI in Microsoft 365 for business.</p>
+            <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:w-[16rem]  md:mt-auto mt-1">Copilot for Microsoft 365
+            </h2>
+            <p class="ml-6 md:mt-4 mt-3 w-[16.5rem]">Save time and focus on the things that matter most with AI in
+              Microsoft 365 for business.</p>
           </div>
           <div class="ml-6 pb-6 md:mt-auto mt-4">
             <button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Learn more</button>
@@ -236,11 +241,12 @@
         </div>
 
 
-        <div class="businessCard4  md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between">
+        <div class="businessCard4  md:h-full h-[30rem] shadow-lg md:mr-3 flex flex-col justify-between md:mx-auto mx-2">
           <div>
             <img src="./images/Content-Card-Windows-11-Business.jpg" alt="">
             <h2 class="md:text-3xl text-2xl font-semibold ml-6 md:mt-12 mt-8 w-[16rem]">Windows 11 for business</h2>
-            <p class="ml-6 md:mt-4 mt-3 w-[16rem]">Designed for hybrid work. Powerful for employees. Consistent for IT. Secure for all.</p>
+            <p class="ml-6 md:mt-4 mt-3 w-[16rem]">Designed for hybrid work. Powerful for employees. Consistent for IT.
+              Secure for all.</p>
           </div>
           <div class="ml-6 pb-6 md:mt-auto mt-4">
             <button class="bg-[#0067b8] text-white text-sm py-2 px-4 rounded-sm hover:bg-[#004a7f]">Learn more</button>
@@ -249,10 +255,28 @@
       </div>
     </div>
 
+    <!-- Follow Links -->
+    <div class="mt-24 md:ml-auto ml-6 flex items-center">
+      <span class="text-lg md:ml-8"> 
+        Follow Microsoft
+      </span>
+      <div class="logo flex space-x-5 items-center justify-center ml-6">
+        <img class="w-8 h-8" src="./images/Facebook.avif" alt="facebookIcon">
+        <img class="w-8 h-8" src="./images/X.webp" alt="twitterIcon">
+        <img class="w-8 h-8" src="./images/YouTube.webp" alt="youtubeIcon">
+      </div>
+    </div>
 
+    <!-- Button to scroll to top -->
+    <div class="mt-4 mr-4 flex justify-end">
+      <button class="flex items-center space-x-1 px-3 py-2 bg-[#d9d9d9] rounded-sm hover:bg-white hover:shadow-md">
+        <img class="h-4 w-4 mt-1" src="./images/up-arrow.png" alt="upArrow"><span class="text-xl font-semibold">Back to top</span>
+      </button>
+    </div>
 
-    <div class="m-12">
-      Extra
+    <!-- footer -->
+    <div class="h-[24rem] bg-[#f2f2f2] mt-20">
+
     </div>
   </div>
 </body>
